Added better validation

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 <body class="bg-white text-gray-900 sm:text-justify">
 
   <!-- Navigation -->
-  <nav class="fixed top-0 w-full z-50 backdrop-blur-md bg-white/70 shadow-md border-b border-blue-500" role="navigation">
+  <nav class="fixed top-0 w-full z-50 backdrop-blur-md bg-white/70 shadow-md border-b border-blue-500"
+    role="navigation">
     <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5">
       <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakreiniging LM | Dakwerken LM</a>
       <button id="navToggle" aria-label="Toggle navigation" aria-expanded="false"
@@ -236,7 +237,7 @@
   <section id="contact" class="py-24 bg-white">
     <div class="max-w-3xl mx-auto px-6">
       <h2 class="text-3xl font-bold text-center text-blue-800 mb-12">Contacteer Ons</h2>
-      <form id="contactForm" action="https://formsubmit.co/e7c16f3ded6160e26886f3ee97fe1747" method="POST"
+      <form id="contactForm" action="/assets/contact-handler.php" method="POST"
         class="bg-white p-8 rounded-lg shadow-lg space-y-6" novalidate>
         <!-- Honeypot -->
         <div aria-hidden="true" class="absolute left-[-9999px]">
@@ -249,7 +250,7 @@
         <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_subject" value="Dakreiniging LM | Dakwerken LM: Nieuw bericht">
         <input type="hidden" name="_blacklist"
-          value="buy now, click here, free offer, work from home, make money fast, risk-free, limited time, act now, credit card required, no fees, weight loss, miracle cure, visit our site, exclusive deal, earn cash">
+          value="koop nu, klik hier, gratis aanbod, werk van thuis, snel geld verdienen, risicovrij, beperkte tijd, nu handelen, creditcard vereist, geen kosten, afslanken snel, wondermiddel, bezoek onze site, exclusieve deal, verdien contant, bitcoin investering, online casino, gratis proef, investeer nu, snel rijk worden">
 
         <!-- Naam -->
         <div>
