--- a/index.html
+++ b/index.html
@@ -130,12 +130,6 @@
               Wij geloven in duidelijke communicatie, correcte afspraken en duurzame oplossingen. Of het nu gaat om
               dakherstellingen, dakreiniging of onderhoud &dash; uw dak is bij ons in goede handen.
             </p>
-            <div class="flex items-center space-x-4 mt-6">
-              <img src="assets/img/team_philippe.jpg" alt="Philippe"
-                class="w-16 h-16 rounded-full object-cover shadow-md">
-              <img src="assets/img/team_lander.jpg" alt="Lander" class="w-16 h-16 rounded-full object-cover shadow-md">
-              <span class="text-sm text-gray-600">Vader & zoon &dash; Philippe & Lander</span>
-            </div>
           </div>
           <div class="grid grid-cols-2 gap-4">
             <img src="assets/img/actie.webp" alt="Dakwerken actie" width="800" height="600" loading="lazy"
@@ -323,11 +317,10 @@
           <h4 class="font-semibold mb-2">Contact</h4>
           <p>info@dakreiniginglm.be</p>
           <p><a href="tel:+32473671944">&plus;32 473 67 19 44</a></p>
-          <p>2200 Herentals</p>
         </div>
         <div class="text-center">
           <p class="text-white"><a href="https://linkedin.com/in/michielve" target="_blank" class="hover:underline">Made
-              with 💙 by Michiel</a></p>
+              by Michiel</a></p>
         </div>
       </div>
     </div>
