switched into diensten page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
   <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
   <link rel="stylesheet" href="assets/css/output.css">
-  <link rel="stylesheet" href="/assets/js/bundle.css">
 
   <link rel="canonical" href="https://www.dakreiniginglm.be/">
 
@@ -194,7 +193,7 @@
         <h2 class="text-4xl font-bold text-blue-800 mb-12 leading-tight">Onze Diensten</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
 
-          <div role="button" tabindex="0" data-service="Dakherstellingen - Hellende daken"
+          <a href="/diensten/dakherstellingen_hellende_daken.html" target="blank"
             class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
             <img src="assets/img/diensten/herstelling.webp" alt="Dakherstellingen hellende daken" loading="lazy"
               decoding="async"
@@ -205,9 +204,9 @@
               <p class="inline-flex items-center mt-4 text-sm underline">Lees meer<i
                   class="fas fa-arrow-right md:mt-1 ml-2"></i></p>
             </div>
-          </div>
+          </a>
 
-          <div role="button" tabindex="0" data-service="Dakherstellingen - Platte daken"
+          <a href="/diensten/dakherstellingen_platte_daken.html" target="blank"
             class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
             <img src="assets/img/diensten/plat_dak.webp" alt="Dakherstellingen platte daken" loading="lazy"
               decoding="async"
@@ -218,26 +217,25 @@
               <p class="inline-flex items-center mt-4 text-sm underline">Lees meer<i
                   class="fas fa-arrow-right md:mt-1 ml-2"></i></p>
             </div>
-          </div>
+          </a>
 
-          <div role="button" tabindex="0" data-service="Dakreiniging & Ontmossen"
-            class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
-            <img src="assets/img/diensten/reiniging.webp" alt="Dakreiniging &amp; Ontmossen" loading="lazy"
-              decoding="async"
-              class="w-full h-64 object-cover object-top transition-transform duration-500 group-hover:scale-110" />
-            <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
-              <h3 class="text-xl font-semibold mb-2">Dakreiniging & Ontmossen</h3>
-              <p>Reinigen, ontmossen en coaten van hellende daken.</p>
-              <p class="inline-flex items-center mt-4 text-sm underline">Lees meer <i
-                  class="fas fa-arrow-right md:mt-1 ml-2"></i>
-              </p>
-            </div>
+        <a href="/diensten/dakreiniging_ontmossen.html" target="blank"
+          class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
+          <img src="assets/img/diensten/reiniging.webp" alt="Dakreiniging & Ontmossen" loading="lazy" decoding="async"
+            class="w-full h-64 object-cover object-top transition-transform duration-500 group-hover:scale-110" />
+          <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
+            <h3 class="text-xl font-semibold mb-2">Dakreiniging & Ontmossen</h3>
+            <p>Reinigen, ontmossen en coaten van hellende daken.</p>
+            <p class="inline-flex items-center mt-4 text-sm underline">Lees meer <i
+                class="fas fa-arrow-right md:mt-1 ml-2"></i>
+            </p>
           </div>
-        </div>
+        </a>
+      </div>
       </div>
     </section>
 
-
+    <!-- 
     <div id="serviceModal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" aria-hidden="true"
       aria-describedby="modalDescription"
       class="fixed px-12 sm:px-0 -inset-4 bg-black/80 flex justify-center items-center opacity-0 translate-y-4 pointer-events-none transition-all duration-500 ease-out z-50">
@@ -260,7 +258,7 @@
           Sluiten
         </button>
       </div>
-    </div>
+    </div> -->
 
 
 
@@ -462,8 +460,8 @@
         </div>
         <div class="text-center">
           <h4 class="font-semibold mb-2">Contact</h4>
-          <p class="mb-2">info@dakreiniginglm.be</p>
-          <p><a href="tel:+32473671944"><i class="fas fa-phone"></i>&plus;32 473 67 19 44</a></p>
+          <p class="mb-2"><i class="fas fa-envelope mr-2"></i>info@dakreiniginglm.be</p>
+          <p><a href="tel:+32473671944"><i class="fas fa-phone mr-2"></i>&plus;32 473 67 19 44</a></p>
         </div>
         <div class="text-center">
           <p class="text-white"><a href="https://linkedin.com/in/michielve" target="_blank" class="hover:underline">Made
