--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
             </div>
           </div>
           <div class="grid grid-cols-2 gap-4">
-            <img src="assets/img/actie.webp" alt="Dakwerken actie" width="800" height="600" loading="lazy"
+            <img src="assets/img/over_ons/actie.webp" alt="Dakwerken actie" width="800" height="600" loading="lazy"
               decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/auto_logo.webp" alt="Lander aan het klaarmaken" width="800" loading="lazy"
+            <img src="assets/img/over_ons/auto_logo.webp" alt="Lander aan het klaarmaken" width="800" loading="lazy"
               decoding="async" height="600" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/herstelling.webp" alt="Philippe voert een herstelling uit" width="800" height="600"
+            <img src="assets/img/over_ons/herstelling.webp" alt="Philippe voert een herstelling uit" width="800" height="600"
               loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/dakgoot.webp" alt="Dakreiniging" width="800" height="600" loading="lazy"
+            <img src="assets/img/over_ons/dakgoot.webp" alt="Dakreiniging" width="800" height="600" loading="lazy"
               decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
           </div>
         </div>
@@ -219,49 +219,21 @@
             </div>
           </a>
 
-        <a href="/diensten/dakreiniging_ontmossen.html" target="blank"
-          class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
-          <img src="assets/img/diensten/reiniging.webp" alt="Dakreiniging & Ontmossen" loading="lazy" decoding="async"
-            class="w-full h-64 object-cover object-top transition-transform duration-500 group-hover:scale-110" />
-          <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
-            <h3 class="text-xl font-semibold mb-2">Dakreiniging & Ontmossen</h3>
-            <p>Reinigen, ontmossen en coaten van hellende daken.</p>
-            <p class="inline-flex items-center mt-4 text-sm underline">Lees meer <i
-                class="fas fa-arrow-right md:mt-1 ml-2"></i>
-            </p>
-          </div>
-        </a>
-      </div>
+          <a href="/diensten/dakreiniging_ontmossen.html" target="blank"
+            class="rounded-xl shadow-xl overflow-hidden transform transition duration-500 hover:scale-105 group cursor-pointer card focus:outline-none focus:ring-2 focus:ring-blue-500">
+            <img src="assets/img/diensten/reiniging.webp" alt="Dakreiniging & Ontmossen" loading="lazy" decoding="async"
+              class="w-full h-64 object-cover object-top transition-transform duration-500 group-hover:scale-110" />
+            <div class="p-6 bg-blue-50 text-black h-[calc(100%-16rem)] duration-500 hover:text-gray-700">
+              <h3 class="text-xl font-semibold mb-2">Dakreiniging & Ontmossen</h3>
+              <p>Reinigen, ontmossen en coaten van hellende daken.</p>
+              <p class="inline-flex items-center mt-4 text-sm underline">Lees meer <i
+                  class="fas fa-arrow-right md:mt-1 ml-2"></i>
+              </p>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
-
-    <!-- 
-    <div id="serviceModal" role="dialog" aria-modal="true" aria-labelledby="modalTitle" aria-hidden="true"
-      aria-describedby="modalDescription"
-      class="fixed px-12 sm:px-0 -inset-4 bg-black/80 flex justify-center items-center opacity-0 translate-y-4 pointer-events-none transition-all duration-500 ease-out z-50">
-      <div
-        class="bg-white p-6 rounded-xl w-full max-w-full sm:max-w-xl md:max-w-2xl lg:max-w-4xl h-[90vh] overflow-hidden relative flex flex-col shadow-lg">
-        <button id="closeModal"
-          class="absolute top-4 right-4 text-3xl font-bold text-gray-600 hover:text-gray-800 transition"
-          aria-label="Close Modal">
-          &times;
-        </button>
-
-        <h2 id="modalTitle" class="text-3xl sm:text-4xl font-bold text-blue-800 mb-6 mr-4">Info Modal</h2>
-
-        <div class="overflow-y-auto pr-2 sm:mx-6 flex-1 min-h-0 max-h-[70vh]">
-          <p id="modalDescription" class="text-lg text-gray-700 mb-6 leading-relaxed"></p>
-        </div>
-        <button id="closeModalBottom"
-          class="absolute bottom-4 right-4 bg-blue-800 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition hidden sm:block"
-          aria-label="Close Modal">
-          Sluiten
-        </button>
-      </div>
-    </div> -->
-
-
-
 
     <!-- Contact -->
     <section id="contact" class="py-24 bg-white">
