added algemene voorwaarden and gen sitmap

--- a/diensten/dakherstellingen_hellende_daken.html
+++ b/diensten/dakherstellingen_hellende_daken.html
@@ -96,6 +96,13 @@
                             class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
                     </a>
                 </li>
+                <li role="menuitem">
+                    <a href="/algemene-voorwaarden.html" class="group relative inline-block pb-1">
+                        <span class="group-hover:text-blue-900 transition">Algemene Voorwaarden</span>
+                        <span
+                            class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
