--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
         </li>
+        <li role="menuitem">
+          <a href="/algemene-voorwaarden.html" class="group relative inline-block pb-1">
+            <span class="group-hover:text-blue-900 transition">Algemene Voorwaarden</span>
+            <span
+              class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+          </a>
+        </li>
       </ul>
 
     </div>
@@ -174,8 +181,8 @@
               decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
             <img src="assets/img/over_ons/auto_logo.webp" alt="Lander aan het klaarmaken" width="800" loading="lazy"
               decoding="async" height="600" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/herstelling.webp" alt="Philippe voert een herstelling uit" width="800" height="600"
-              loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
+            <img src="assets/img/over_ons/herstelling.webp" alt="Philippe voert een herstelling uit" width="800"
+              height="600" loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
             <img src="assets/img/over_ons/dakgoot.webp" alt="Dakreiniging" width="800" height="600" loading="lazy"
               decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
           </div>
