--- a/privacy.html
+++ b/privacy.html
@@ -45,32 +45,46 @@
         <span class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span>
         <span class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span>
       </button>
-      <ul id="navMenu" role="menu" aria-label="Hoofd navigatie"
-        class="hidden md:flex flex-col md:flex-row md:space-x-6 space-y-4 md:space-y-0 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent px-6 md:px-0 py-6 md:py-0 text-blue-800 text-sm md:text-base font-medium transition-all duration-300 ease-in-out">
-        <li>
-          <a href="/#" class="group relative inline-block pb-1">
+      <ul id="navMenu" role="menubar" aria-label="Hoofd navigatie"
+        class="hidden md:flex flex-col md:flex-row md:space-x-6 space-y-4 md:space-y-0 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent px-6 md:px-0 py-6 md:py-0 text-blue-800 text-sm md:text-base font-medium transition-all duration-300 ease-in-out transform origin-top opacity-0 scale-95 md:opacity-100 md:scale-100">
+        <li role="menuitem">
+          <a href="/#home" class="group relative inline-block pb-1">
             <span class="group-hover:text-blue-900 transition">Home</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
         </li>
-        <li>
+        <li role="menuitem">
           <a href="/#over-ons" class="group relative inline-block pb-1">
             <span class="group-hover:text-blue-900 transition">Wie zijn wij</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
         </li>
-        <li>
+        <li role="menuitem">
           <a href="/#diensten" class="group relative inline-block pb-1">
             <span class="group-hover:text-blue-900 transition">Onze Diensten</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
         </li>
-        <li>
+        <li role="menuitem">
           <a href="/#contact" class="group relative inline-block pb-1">
             <span class="group-hover:text-blue-900 transition">Contact</span>
+            <span
+              class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+          </a>
+        </li>
+        <li role="menuitem">
+          <a href="/#recensies" class="group relative inline-block pb-1">
+            <span class="group-hover:text-blue-900 transition">Recensies</span>
+            <span
+              class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+          </a>
+        </li>
+        <li role="menuitem">
+          <a href="/algemene-voorwaarden.html" class="group relative inline-block pb-1">
+            <span class="group-hover:text-blue-900 transition">Algemene Voorwaarden</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
           </a>
@@ -84,7 +98,7 @@
   <div class="max-w-4xl mx-auto px-6 py-36 md:py-24">
     <div class="sm:block md:flex justify-between items-center mb-6">
       <h1 class="text-3xl font-bold text-blue-800 mb-4 md:mb-0">Privacybeleid</h1>
-      <p class="text-sm text-gray-500">Laatst bijgewerkt: 17 mei 2025</p>
+      <p class="text-sm text-gray-500">Laatst bijgewerkt: 8 juli 2025</p>
     </div>
 
     <p class="mb-4">Bij Dakreiniging LM hechten wij veel waarde aan uw privacy. In deze verklaring leggen we uit welke
@@ -110,7 +124,7 @@
 
 
     <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">5. Contact</h2>
-    <p class="mb-4">Heeft u vragen over dit privacybeleid? Neem gerust contact met ons op via<a
+    <p class="mb-4">Heeft u vragen over dit privacybeleid? Neem gerust contact met ons op via <a
         href="mailto:info@dakreiniginglm.be" class="text-blue-700 underline"
         aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>
       .</p>
