--- a/diensten/dakherstellingen_hellende_daken.html
+++ b/diensten/dakherstellingen_hellende_daken.html
@@ -16,7 +16,7 @@
 
     <meta property="og:title" content="Dakherstellingen Hellende Daken | Dakreiniging LM" />
     <meta property="og:description"
-        content="Uw specialist voor dakherstellingen aan hellende daken in de regio Herentals en Leuven. Snelle service bij lekkages en stormschade." />
+        content="Uw specialist voor dakherstellingen aan hellende daken in de regio Groot-Leuven. Snelle service bij lekkages en stormschade." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.dakreiniginglm.be/dakherstellingen-hellende-daken.html" />
     <meta property="og:image" content="https://www.dakreiniginglm.be/assets/dak.webp" />
@@ -62,7 +62,7 @@
             <ul id="navMenu" role="menubar" aria-label="Hoofd navigatie"
                 class="hidden md:flex flex-col md:flex-row md:space-x-6 space-y-4 md:space-y-0 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent px-6 md:px-0 py-6 md:py-0 text-blue-800 text-sm md:text-base font-medium transition-all duration-300 ease-in-out transform origin-top opacity-0 scale-95 md:opacity-100 md:scale-100">
                 <li role="menuitem">
-                    <a href="/#home" class="group relative inline-block pb-1">
+                    <a href="/" class="group relative inline-block pb-1">
                         <span class="group-hover:text-blue-900 transition">Home</span>
                         <span
                             class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
@@ -108,9 +108,9 @@
     </nav>
 
     <main role="main">
-        <section class="relative bg-cover bg-center h-64 sm:h-80 md:h-96"
-            style="background-image: url('assets/img/diensten/herstelling.webp');">
-            <div class="absolute inset-0 bg-blue-900/60 flex items-center justify-center">
+        <section class="relative bg-cover bg-right h-80 md:h-96"
+            style="background-image: url('/assets/img/dak_herstelling.webp');">
+            <div class="absolute inset-0 bg-black/50 flex items-center justify-center">
                 <h1
                     class="text-4xl sm:text-5xl md:text-6xl font-bold text-white text-center drop-shadow-lg pt-24 md:pt-0">
                     Dakherstellingen Hellende Daken</h1>
@@ -129,13 +129,16 @@
                     </p>
 
                     <h2 class="text-2xl sm:text-3xl font-bold text-blue-800 mt-12 mb-6 flex items-center gap-3">
-                        <i class="fas fa-wrench text-blue-700"></i> Onze Aanpak bij Dakherstellingen
+                        Onze Aanpak bij Dakherstellingen
                     </h2>
                     <p class="text-lg">
                         Wij zorgen voor een effectieve en duurzame oplossing voor elk dakprobleem:
                     </p>
                     <ul class="list-none space-y-4 text-lg">
                         <li class="flex items-start">
+                            <div class="justify-center items-center">
+                                <i class="fas fa-check-circle mr-3 text-green-800 text-xl flex-shrink-0 mt-1"></i>
+                            </div>
                             <div>
                                 <h3 class="font-bold text-xl mb-1 text-blue-800">Opsporen van Lekkages</h3>
                                 <p>Onze experts zijn bedreven in het nauwkeurig opsporen van lekkages bij hellende
@@ -144,6 +147,9 @@
                             </div>
                         </li>
                         <li class="flex items-start">
+                            <div class="justify-center items-center">
+                                <i class="fas fa-check-circle mr-3 text-green-800 text-xl flex-shrink-0 mt-1"></i>
+                            </div>
                             <div>
                                 <h3 class="font-bold text-xl mb-1 text-blue-800">Duidelijke Communicatie</h3>
                                 <p>Wij geloven in transparantie. U krijgt van ons altijd een heldere uitleg over de aard
@@ -152,6 +158,9 @@
                             </div>
                         </li>
                         <li class="flex items-start">
+                            <div class="justify-center items-center">
+                                <i class="fas fa-check-circle mr-3 text-green-800 text-xl flex-shrink-0 mt-1"></i>
+                            </div>
                             <div>
                                 <h3 class="font-bold text-xl mb-1 text-blue-800">Snelle Uitvoering</h3>
                                 <p>Na uw goedkeuring voeren wij de herstellingen in zeer korte termijn uit. Wij
@@ -162,7 +171,7 @@
                     </ul>
 
                     <h2 class="text-2xl sm:text-3xl font-bold text-blue-800 mt-12 mb-6 flex items-center gap-3">
-                        <i class="fas fa-star text-yellow-500"></i> Extra Services
+                        Extra Services
                     </h2>
                     <ul class="list-none space-y-4 text-lg">
                         <li class="flex items-start">
@@ -217,7 +226,11 @@
                     <h4 class="font-bold text-lg">Dakwerken LM</h4>
                     <h4 class="font-bold text-lg mb-2">Dakreiniging LM</h4>
                     <p>&copy; 2025 Alle rechten voorbehouden</p>
-                    <a href="privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
+                    <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0">
+                        <a href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
+                        <a href="/algemene-voorwaarden.html" class="underline hover:text-blue-200 transition">Algemene
+                            Voorwaarden</a>
+                    </div>
                 </div>
                 <div class="text-center">
                     <h4 class="font-semibold mb-2">Contact</h4>
@@ -232,79 +245,80 @@
             </div>
         </div>
     </footer>
-    <script src="../assets/js/bundle.js" defer></script>
+
+    <script src="../assets/js/bundle-sub.js" defer></script>
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Service",
-      "serviceType": "Dakherstellingen - Hellende Daken",
-      "name": "Dakherstellingen Hellende Daken door Dakreiniging LM",
-      "description": "Snelle en professionele dakherstellingen voor lekkages, stormschade en algemene slijtage aan hellende daken in de regio Herentals en Groot-Leuven. Inclusief gratis dakcontrole.",
-      "provider": {
-        "@type": "LocalBusiness",
-        "name": "Dakreiniging LM",
-        "image": "https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png",
-        "url": "https://www.dakreiniginglm.be",
-        "telephone": "+32 473 67 19 44",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Herentals",
-          "postalCode": "2200",
-          "addressCountry": "BE"
-        }
-      },
-      "areaServed": [
         {
-          "@type": "AdministrativeArea",
-          "name": "Herentals"
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "serviceType": "Dakherstellingen - Hellende Daken",
+        "name": "Dakherstellingen Hellende Daken door Dakreiniging LM",
+        "description": "Snelle en professionele dakherstellingen voor lekkages, stormschade en algemene slijtage aan hellende daken in de regio Herentals en Groot-Leuven. Inclusief gratis dakcontrole.",
+        "url": "https://www.dakreiniginglm.be/dakherstellingen-hellende-daken.html",
+        "provider": {
+            "@type": "LocalBusiness",
+            "@id": "https://www.dakreiniginglm.be/#organization",
+            "name": "Dakreiniging LM",
+            "image": "https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png",
+            "url": "https://www.dakreiniginglm.be",
+            "telephone": "+32 473 67 19 44",
+            "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Herentals",
+            "postalCode": "2200",
+            "addressCountry": "BE"
+            },
+            "priceRange": "€€",
+            "sameAs": [
+            "https://www.linkedin.com/in/michielve"
+            ]
         },
-        {
-          "@type": "AdministrativeArea",
-          "name": "Leuven"
+        "areaServed": [
+            { "@type": "AdministrativeArea", "name": "Herentals" },
+            { "@type": "AdministrativeArea", "name": "Leuven" }
+        ],
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Dakherstellingen Hellende Daken Services",
+            "itemListElement": [
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                "@type": "Service",
+                "name": "Lekkage opsporen hellend dak"
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                "@type": "Service",
+                "name": "Stormschade herstel hellend dak"
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                "@type": "Service",
+                "name": "Slijtage herstel dakpannen"
+                }
+            },
+            {
+                "@type": "Offer",
+                "itemOffered": {
+                "@type": "Service",
+                "name": "Gratis dakcontrole"
+                }
+            }
+            ]
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5",
+            "reviewCount": "6"
         }
-      ],
-      "url": "https://www.dakreiniginglm.be/dakherstellingen-hellende-daken.html",
-      "hasOfferCatalog": {
-        "@type": "OfferCatalog",
-        "name": "Dakherstellingen Hellende Daken Services",
-        "itemListElement": [
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Lekkage opsporen hellend dak"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Stormschade herstel hellend dak"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Slijtage herstel dakpannen"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Gratis dakcontrole"
-            }
-          }
-        ]
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "5", 
-        "reviewCount": "6" 
-      }
-    }
-    </script>
+        }
+</script>
+
 </body>
 
 </html>
