--- a/privacy.html
+++ b/privacy.html
@@ -48,7 +48,7 @@
       <ul id="navMenu" role="menubar" aria-label="Hoofd navigatie"
         class="hidden md:flex flex-col md:flex-row md:space-x-6 space-y-4 md:space-y-0 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent px-6 md:px-0 py-6 md:py-0 text-blue-800 text-sm md:text-base font-medium transition-all duration-300 ease-in-out transform origin-top opacity-0 scale-95 md:opacity-100 md:scale-100">
         <li role="menuitem">
-          <a href="/#home" class="group relative inline-block pb-1">
+          <a href="/" class="group relative inline-block pb-1">
             <span class="group-hover:text-blue-900 transition">Home</span>
             <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
@@ -94,43 +94,79 @@
   </nav>
 
 
+  <main role="main">
+    <section class="max-w-4xl mx-auto px-6 py-36 md:py-24">
+      <div class="sm:block md:flex justify-between items-center mb-6">
+        <h1 class="text-3xl font-bold text-blue-800 mb-4 md:mb-0">Privacybeleid</h1>
+        <p class="text-sm text-gray-500">Laatst bijgewerkt: 8 juli 2025</p>
+      </div>
 
-  <div class="max-w-4xl mx-auto px-6 py-36 md:py-24">
-    <div class="sm:block md:flex justify-between items-center mb-6">
-      <h1 class="text-3xl font-bold text-blue-800 mb-4 md:mb-0">Privacybeleid</h1>
-      <p class="text-sm text-gray-500">Laatst bijgewerkt: 8 juli 2025</p>
+      <p class="mb-4">Bij Dakreiniging LM hechten wij veel waarde aan uw privacy. In deze verklaring leggen we uit welke
+        gegevens we verzamelen, waarom we dat doen, en hoe we deze beveiligen.</p>
+
+      <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">1. Verzamelde gegevens</h2>
+      <p class="mb-4">Via het contactformulier verzamelen we uw naam, e-mailadres en onderwerp. Deze gegevens worden
+        enkel
+        gebruikt om u te contacteren naar aanleiding van uw aanvraag.</p>
+
+      <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">2. Gebruik van Google Analytics</h2>
+      <p class="mb-4">Deze website maakt gebruik van Google Analytics 4 om anonieme gegevens te verzamelen over het
+        gedrag
+        van bezoekers. Dit helpt ons de website te verbeteren. Er worden geen persoonsgegevens opgeslagen.</p>
+
+      <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">3. Geen opslag of verkoop van gegevens</h2>
+      <p class="mb-4">Uw gegevens worden niet opgeslagen in een database, en worden nooit doorverkocht of gedeeld met
+        derden.</p>
+
+      <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">4. Gegevens laten verwijderen</h2>
+      <p class="mb-4">U heeft het recht om uw gegevens te laten verwijderen. Stuur hiervoor een verzoek naar <a
+          href="mailto:info@dakreiniginglm.be" class="text-blue-700 underline"
+          aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>
+        .</p>
+
+
+      <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">5. Contact</h2>
+      <p class="mb-4">Heeft u vragen over dit privacybeleid? Neem gerust contact met ons op via <a
+          href="mailto:info@dakreiniginglm.be" class="text-blue-700 underline"
+          aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>.
+      </p>
+    </section>
+  </main>
+
+  <footer class="bg-blue-900 text-white pt-12 pb-8">
+    <div class="max-w-7xl mx-auto px-6">
+      <div class="text-center mb-12">
+        <h3 class="text-2xl md:text-3xl font-bold mb-4">Klaar voor een propere en veilige dakoplossing?</h3>
+        <a href="#contact"
+          class="inline-block bg-white text-blue-900 font-semibold px-6 py-3 rounded-full hover:bg-gray-100 transition duration-300 shadow-md">
+          Contacteer ons
+        </a>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-sm md:text-base border-t border-blue-300 pt-8">
+        <div class="text-center">
+          <h4 class="font-bold text-lg">Dakwerken LM</h4>
+          <h4 class="font-bold text-lg mb-2">Dakreiniging LM</h4>
+          <p>&copy; 2025 Alle rechten voorbehouden</p>
+          <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0">
+            <a href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
+            <a href="/algemene-voorwaarden.html" class="underline hover:text-blue-200 transition">Algemene
+              Voorwaarden</a>
+          </div>
+        </div>
+        <div class="text-center">
+          <h4 class="font-semibold mb-2">Contact</h4>
+          <p class="mb-2"><i class="fas fa-envelope mr-2"></i>info@dakreiniginglm.be</p>
+          <p><a href="tel:+32473671944"><i class="fas fa-phone mr-2"></i>&plus;32 473 67 19 44</a></p>
+        </div>
+        <div class="text-center">
+          <p class="text-white"><a href="https://linkedin.com/in/michielve" target="_blank" class="hover:underline">Made
+              by Michiel</a></p>
+        </div>
+      </div>
     </div>
+  </footer>
 
-    <p class="mb-4">Bij Dakreiniging LM hechten wij veel waarde aan uw privacy. In deze verklaring leggen we uit welke
-      gegevens we verzamelen, waarom we dat doen, en hoe we deze beveiligen.</p>
-
-    <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">1. Verzamelde gegevens</h2>
-    <p class="mb-4">Via het contactformulier verzamelen we uw naam, e-mailadres en onderwerp. Deze gegevens worden enkel
-      gebruikt om u te contacteren naar aanleiding van uw aanvraag.</p>
-
-    <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">2. Gebruik van Google Analytics</h2>
-    <p class="mb-4">Deze website maakt gebruik van Google Analytics 4 om anonieme gegevens te verzamelen over het gedrag
-      van bezoekers. Dit helpt ons de website te verbeteren. Er worden geen persoonsgegevens opgeslagen.</p>
-
-    <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">3. Geen opslag of verkoop van gegevens</h2>
-    <p class="mb-4">Uw gegevens worden niet opgeslagen in een database, en worden nooit doorverkocht of gedeeld met
-      derden.</p>
-
-    <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">4. Gegevens laten verwijderen</h2>
-    <p class="mb-4">U heeft het recht om uw gegevens te laten verwijderen. Stuur hiervoor een verzoek naar <a
-        href="mailto:info@dakreiniginglm.be" class="text-blue-700 underline"
-        aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>
-      .</p>
-
-
-    <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">5. Contact</h2>
-    <p class="mb-4">Heeft u vragen over dit privacybeleid? Neem gerust contact met ons op via <a
-        href="mailto:info@dakreiniginglm.be" class="text-blue-700 underline"
-        aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>
-      .</p>
-  </div>
-
-  <script src="assets/js/bundle.js" defer></script>
+  <script src="assets/js/bundle-sub.js" defer></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
