positioning for . in privacy page

--- a/privacy.html
+++ b/privacy.html
@@ -121,8 +121,8 @@
       <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">4. Gegevens laten verwijderen</h2>
       <p class="mb-4">U heeft het recht om uw gegevens te laten verwijderen. Stuur hiervoor een verzoek naar <a
           href="mailto:info@dakreiniginglm.be" class="text-blue-700 underline"
-          aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>
-        .</p>
+          aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>.
+      </p>
 
 
       <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">5. Contact</h2>
