--- a/diensten/dakreiniging_ontmossen.html
+++ b/diensten/dakreiniging_ontmossen.html
@@ -220,7 +220,7 @@
     <div class="max-w-7xl mx-auto px-6">
       <div class="text-center mb-12">
         <h3 class="text-2xl md:text-3xl font-bold mb-4">Klaar voor een propere en veilige dakoplossing?</h3>
-        <a href="#contact"
+        <a href="/#contact"
           class="inline-block bg-white text-blue-900 font-semibold px-6 py-3 rounded-full hover:bg-gray-100 transition duration-300 shadow-md">
           Contacteer ons
         </a>
